Fix alignment of Password box

--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -55,6 +55,6 @@
     width: 250px;
 }
 
-#password {
+#login-password-box {
     margin-left: 0px;
 }
